--- a/package.json
+++ b/package.json
@@ -10,6 +10,8 @@
     "@element-plus/icons-vue": "^2.3.1",
     "axios": "^1.9.0",
     "core-js": "^3.8.3",
+    "date-fns": "^4.1.0",
+    "echarts": "^5.6.0",
     "element-plus": "^2.9.11",
     "vue": "^3.2.13",
     "vue-router": "^4.0.3",
